Add all entries RSS feed and put links on tag page itself and baggy too
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -93,6 +93,7 @@ config:
             unread: 'Ungelesene'
             starred: 'Favoriten'
             archive: 'Archivierte'
+            # all: 'All'
         rss_limit: 'Anzahl der Einträge pro Feed'
     form_user:
         two_factor_description: "Wenn du die Zwei-Faktor-Authentifizierung aktivierst, erhältst du eine E-Mail mit einem Code bei jeder nicht vertrauenswürdigen Verbindung"
