--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -90,9 +90,10 @@ config:
         token_reset: 'Nulstil token'
         rss_links: 'RSS-Links'
         rss_link:
-            unread: 'ulæst'
-            starred: 'favoritter'
-            archive: 'arkiv'
+            unread: 'Ulæst'
+            starred: 'Favoritter'
+            archive: 'Arkiv'
+            # all: 'All'
         # rss_limit: 'Number of items in the feed'
     form_user:
         # two_factor_description: "Enabling two factor authentication means you'll receive an email with a code on every new untrusted connexion"
