--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -77,6 +77,7 @@ config:
             redirect_current_page: "À la page courante"
         pocket_consumer_key_label: "Clé d’authentification Pocket pour importer les données"
         android_configuration: "Configurez votre application Android"
+        android_instruction: "Appuyez ici pour préremplir votre application Android"
         help_theme: "L’affichage de wallabag est personnalisable. C’est ici que vous choisissez le thème que vous préférez."
         help_items_per_page: "Vous pouvez définir le nombre d’articles affichés sur chaque page."
         help_reading_speed: "wallabag calcule une durée de lecture pour chaque article. Vous pouvez définir ici, grâce à cette liste déroulante, si vous lisez plus ou moins vite. wallabag recalculera la durée de lecture de chaque article."
